# rules_manifest

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  defs.bzl  go.mod  go.sum  manifest.bzl  vendor.sh
.github/: release-drafter.yml
.github/workflows/: codeql-analysis.yml
containermanifester/: BUILD.bazel  main.go  main_test.go
lambdamanifester/: BUILD.bazel  main.go
manifester/: BUILD.bazel  main.go
