load("//:manifest.bzl", "lambda_manifest")
load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/kindlyops/rules_manifest
gazelle(
    name = "gazelle",
    external = "vendored",
)

stardoc(
    name = "docs",
    input = "manifest.bzl",
    out = "docs.md",
    symbol_names = ["lambda_manifest"],
)

sh_binary(
    name = "vendor",
    srcs = ["vendor.sh"],
    args = [
        "$(location @bazel_gazelle//cmd/gazelle)",
    ],
    data = [
        "@bazel_gazelle//cmd/gazelle",
        "@go_sdk//:files",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
