load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/kindlyops/rules_manifest/lambdamanifester",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "manifester",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
